[package]
name = "custom-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
spl-token =	"4.0.0"
solana-program = "1.16.16"
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0", features = ["metadata"]}
